[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shake"
authors = [
    {name = "xororist"},
]
description = "Shake is a open source CLI for easily monitoring ressources consumed by a proccess"
requires-python = ">=3.7"
keywords = ["CLI", "monitoring"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "psutil"
]
dynamic = ["version"]


[project.scripts]
shake = "cli.main:cli"
